--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promiseall</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <input type="button" value="Button" id="myBtn">
+    <br><br>
+    <img id="myImg" src=""  style="width: 65%;">
 </body>
 <script src="script.js"></script>
 </html>
